--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/typeorm": "^10.0.2",
     "cache-manager": "^5.7.6",
     "cache-manager-redis-yet": "^5.1.5",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "graphql": "^16.9.0",
     "graphql-tools": "^9.0.2",
     "ioredis": "^5.4.1",
