--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,16 @@ services:
       - '3000:3000'
     depends_on:
       - redis
+      - db
     environment:
+      # Postgres
+      DB_HOST: db
+      DB_PORT: 5432
+      DB_USER: myuser
+      DB_PASS: mypass
+      DB_NAME: mydb
+
+      # Redis
       REDIS_HOST: redis
       REDIS_PORT: 6379
 
@@ -17,3 +26,13 @@ services:
     container_name: redis_server
     ports:
       - '6379:6379'
+
+  db:
+    image: postgres:15-alpine
+    container_name: postgres_db
+    ports:
+      - '5432:5432'
+    environment:
+      POSTGRES_USER: myuser
+      POSTGRES_PASSWORD: mypass
+      POSTGRES_DB: mydb
